refactoring Unit test