@@ -1,4 +1,4 @@
-package com.myproject.currencylog;
+package com.myproject.currencylog.service;
 
 import com.myproject.currencylog.mapper.RateMapper;
 import com.myproject.currencylog.models.dto.RateResponse;
@@ -15,18 +15,16 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 
-import java.math.BigDecimal;
-import java.time.LocalDate;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
+import static com.myproject.currencylog.util.TestConstants.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.any;
 
 @ExtendWith(MockitoExtension.class)
 class RateQueryServiceTest {
-
     @Mock
     private RateRepository rateRepository;
 
@@ -36,27 +34,26 @@ class RateQueryServiceTest {
     @InjectMocks
     private RateQueryService queryService;
 
+    private final RateResponse RATE_RESPONSE = new RateResponse(US_COUNTRY_CODE, USD_CURRENCY_CODE, USD_NUM_CODE, TODAY, TEST_VALUE_1, 1L, USD_NAME);
+
     @Test
     void findRates_WithFilters() {
         RateEntity entity = new RateEntity();
-        RateResponse response = new RateResponse(
-                "US", "USD", "840", LocalDate.now(), BigDecimal.valueOf(75.5), 1l, "Доллар США"
-        );
-        Page<RateEntity> page = new PageImpl<>(Collections.singletonList(entity));
+        Page<RateEntity> page = new PageImpl<>(List.of(entity));
 
         when(rateRepository.findAll(any(Specification.class), any(Pageable.class))).thenReturn(page);
-        when(rateMapper.toDto(entity)).thenReturn(response);
+        when(rateMapper.toDto(entity)).thenReturn(RATE_RESPONSE);
 
         Page<RateResponse> result = queryService.findRates(
-                Optional.of("US"),
-                Optional.of("USD"),
-                Optional.of("840"),
-                Optional.of(LocalDate.now().minusDays(7)),
-                Optional.of(LocalDate.now()),
+                Optional.of(US_COUNTRY_CODE),
+                Optional.of(USD_CURRENCY_CODE),
+                Optional.of(USD_NUM_CODE),
+                Optional.of(TODAY.minusDays(7)),
+                Optional.of(TODAY),
                 Pageable.unpaged()
         );
 
         assertEquals(1, result.getTotalElements());
-        assertEquals(response, result.getContent().get(0));
+        assertEquals(RATE_RESPONSE, result.getContent().get(0));
     }
 }
